<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>horreum</artifactId>
        <groupId>io.hyperfoil.tools</groupId>
        <version>0.6-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>horreum-integration</artifactId>
    <name>Horreum Integration Tests</name>

    <url>https://horreum.hyperfoil.io/</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.source>8</maven.compiler.source>
        <use.java11plus>true</use.java11plus>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>io.hyperfoil.tools</groupId>
            <artifactId>horreum-client</artifactId>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jboss.slf4j</groupId>
            <artifactId>slf4j-jboss-logging</artifactId>
            <version>1.1.0.Final</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.logmanager</groupId>
            <artifactId>jboss-logmanager</artifactId>
            <version>2.1.18.Final</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.logging</groupId>
            <artifactId>commons-logging-jboss-logging</artifactId>
        </dependency>
    </dependencies>

    <build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <executions>
                <execution>
                    <goals>
                        <goal>test-jar</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
                <systemPropertyVariables>
                    <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                    <maven.home>${maven.home}</maven.home>
                    <horreum.commit.id>${buildNumber}</horreum.commit.id>
                </systemPropertyVariables>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>buildnumber-maven-plugin</artifactId>
        </plugin>
        <plugin>
            <artifactId>maven-antrun-plugin</artifactId>
            <groupId>org.apache.maven.plugins</groupId>
            <version>3.0.0</version>
            <executions>
                <execution>
                    <id>write-build-info</id>
                    <phase>generate-resources</phase>
                    <goals>
                        <goal>run</goal>
                    </goals>
                    <configuration>
                        <target>
                            <mkdir dir="${project.build.outputDirectory}" />
                            <propertyfile file="${project.build.outputDirectory}/buildinfo.properties">
                                <entry key="horreum.build.commit" value="${buildNumber}" />
                                <entry key="horreum.build.timestamp" value="${timestamp}" />
                            </propertyfile>
                        </target>
                    </configuration>
                </execution>
                <execution>
                    <id>copy-application-properties</id>
                    <phase>generate-test-resources</phase>
                    <goals>
                        <goal>run</goal>
                    </goals>
                    <configuration>
                        <target>
                            <copy file="${project.basedir}/../horreum-backend/src/main/resources/application.properties" todir="${project.build.testOutputDirectory}" />
                        </target>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>

    <testResources>
        <testResource>
            <directory>src/test/resources</directory>
            <filtering>false</filtering>
            <includes>
                <include>**/*</include>
            </includes>
        </testResource>
        <testResource>
            <directory>../infra</directory>
            <targetPath>docker-compose</targetPath>
            <includes>
                <include>*.env</include>
                <include>*.json</include>
                <include>*.sh</include>
                <include>*.yml</include>
                <include>Dockerfile.*</include>
            </includes>
        </testResource>
    </testResources>
    </build>
</project>